--- a/katalog/templates/katalog.html
+++ b/katalog/templates/katalog.html
@@ -10,7 +10,9 @@
   <h5>Student ID: </h5>
   <p>{{npm}}</p>
 
-  <table>
+  <p>{{pesan}}</p>
+
+  <table border="1">
     <tr>
       <th>Item Name</th>
       <th>Item Price</th>
