--- a/katalog/templates/katalog.html
+++ b/katalog/templates/katalog.html
@@ -12,9 +12,7 @@
 
   <p>"test"</p>
 
-  <p>{{pesan}}</p>
-
-  <table border="1">
+  <table>
     <tr>
       <th>Item Name</th>
       <th>Item Price</th>
