need to be fixed soon

--- a/todolist/templates/form_task.html
+++ b/todolist/templates/form_task.html
@@ -6,19 +6,32 @@
 
 {% block content %}  
 
-<div class = "create-task">
-    
-    <h1>Create Task Form</h1>  
+<div class = "min-h-screen flex flex-col items-center justify-center sm:min-h-screen">
+    <div class = "create-task bg-[#f6dB00] rounded-2xl shadow-lg max-w-[40%] p-5">
+        
+        <h1 class = "text-6xl font-extrabold  text-center mb-6">Create Task Form</h1>  
 
-        <form method="POST" >  
-            <table>  
-                {{ task.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" value="Create Task"/></td>  
-                </tr>  
-            </table>  
-        </form>
-</div>  
+            <form method="POST" >  
+                {% csrf_token %}  
+                <table style="margin-left:auto;margin-right:auto;" class="content-center">  
+                    <tr>
+                        <td class = "text-center">Task Name</td>
+                    </tr> 
+                    <tr>  
+                        <td><input type="text" name="task_name" placeholder="Enter your Task Name" required class="form-control rounded-3xl p-1 w-full" text-align="center"></td>  
+                    </tr>  
+                    <tr>
+                        <td class = "text-center">Task description</td>
+                    </tr> 
+                    <tr>  
+                        <td><input type="text" name="task_description" placeholder="Enter your Task Description" required class="form-control rounded-3xl p-1 w-full" text-align="center"></td>  
+                    </tr>  
+                    <tr>
+                        <td><input class="btn login_btn mt-5 mb-5 p-1 bg-black rounded-lg w-full text-white font-bold" type="submit" name="create-task" value="Create"></td>
+                    </tr>
+                </table>  
+            </form>
 
+    </div>  
+</div>
 {% endblock content %}
