--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -5,41 +5,43 @@
 {% endblock meta %}
 
 {% block content %}
+<div class = "min-h-screen flex flex-col items-center justify-center sm:min-h-screen">
+    <div class = "login bg-[#f6dB00] rounded-2xl shadow-lg max-w-[40%] p-5">
+        <h1 class = "text-6xl font-extrabold  text-center mb-6">Login</h1>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class = "content-center">
+                <table style="margin-left:auto;margin-right:auto;" class="content-center">
+                    <tr>
+                        <td class = "text-center">Username</td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" name="username" placeholder="Username" class="form-control rounded-3xl p-1 w-full" text-align="center"></td>
+                    </tr>
+                            
+                    <tr>
+                        <td class = "text-center">Password</td>
+                    </tr>
+                    <tr>
+                        <td><input type="password" name="password" placeholder="Password" size="10" class="form-control rounded-3xl p-1 w-full"></td>
+                    </tr>
 
-<div class = "login">
+                    <tr>
+                        <td><input class="btn login_btn mt-5 mb-5 p-1 bg-black rounded-lg w-full text-white font-bold" type="submit" value="Login"></td>
+                    </tr>
+                </table>
+            </div>
+        </form>
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}     
+            
+        Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
 
-    <h1>Login</h1>
-
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}     
-        
-    Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
-
+    </div>
 </div>
-
 {% endblock content %}
