--- a/todolist/templates/form_task.html
+++ b/todolist/templates/form_task.html
@@ -18,13 +18,13 @@
                         <td class = "text-center">Task Name</td>
                     </tr> 
                     <tr>  
-                        <td><input type="text" name="task_name" placeholder="Enter your Task Name" required class="form-control rounded-3xl p-1 w-full" text-align="center"></td>  
+                        <td><input type="text" name="title" placeholder="Enter your Task Name" required class="form-control rounded-3xl p-1 w-full" text-align="center"></td>  
                     </tr>  
                     <tr>
                         <td class = "text-center">Task description</td>
                     </tr> 
                     <tr>  
-                        <td><input type="text" name="task_description" placeholder="Enter your Task Description" required class="form-control rounded-3xl p-1 w-full" text-align="center"></td>  
+                        <td><input type="text" name="description" placeholder="Enter your Task Description" required class="form-control rounded-3xl p-1 w-full" text-align="center"></td>  
                     </tr>  
                     <tr>
                         <td><input class="btn login_btn mt-5 mb-5 p-1 bg-black rounded-lg w-full text-white font-bold" type="submit" name="create-task" value="Create"></td>
