--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -14,7 +14,7 @@
     </nav>
   </header>
   <main class=relative>
-    <div class="flex-none min-h-screen grid grid-cols-1 md:grid-cols-3 border-4  lg:grid-cols-4 sm:grid-cols-2 gap-10">
+    <div class="flex-none min-h-screen grid grid-cols-4 gap-5">
         {% for todolist in data_todolist %}
             <div class="max-w-sm rounded overflow-hidden shadow-lg">
                 <div class="px-6 py-4">
