--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -23,7 +23,7 @@
                         <td class = "text-center">Password</td>
                     </tr>
                     <tr>
-                        <td><input type="password" name="password" placeholder="Password" size="10" class="form-control rounded-3xl p-1 w-full"></td>
+                        <td><input type="password" name="password" placeholder="Password" class="form-control rounded-3xl p-1 w-full"></td>
                     </tr>
 
                     <tr>
